Fix overflow

--- a/public/global.css
+++ b/public/global.css
@@ -3,4 +3,5 @@ html, body {
 	/* Used to show scroll bar but not to shrink page for the width of the scroll bar */
 	width: 100vw;
 	overflow-y: overlay;
+	overflow-x: clip;
 }
